debci (0.11) UNRELEASED; urgency=medium

  * debci-migrate: added a data migration mechanism that is also automatically
    executed during postinst.

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 11 Nov 2014 21:49:12 -0200

debci (0.10.3) unstable; urgency=medium

  [ Brandon Fairchild ]
  * handle old test run data that didn't have a run_id.

  [ Antonio Terceiro ]
  * debci-status: fix generation of packages status file which was incorrectly
    repeating the status for the very first package over and over.

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 14 Oct 2014 18:55:27 -0300

debci (0.10.2) unstable; urgency=medium

  [ Antonio Terceiro ]
  * lib/functions.sh: accept any value of Testsuite matching `autopkgtest`
    insted of only exact matches when looking for source packages with test
    suites. This will allow detecting packages with specialized values such as
    autopkgtest-pkg-ruby and autopkgtest-pkg-perl.

  [ Brandon Fairchild ]
  * Detect JSON parsing errors on history files instead of silently failing
    and leaving a blank history (Closes: #759569)
  * Avoid also listing lib* packages under l/.

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 08 Oct 2014 08:53:37 -0300

debci (0.10.1) unstable; urgency=medium

  * Fix documentation build

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 30 Sep 2014 17:29:48 -0300

debci (0.10) unstable; urgency=medium

  [ Martin Pitt ]
  * Fix Makefile to be idempotent, previously it failed on already existing
    symlinks.
  * Add missing dctrl-tools build dependency, Makefile is calling grep-dctrl.
  * Makefile: Don't call "checkdeps" on "make check", the test suite doesn't
    actually need autopkgtest or the libjs packages (which are for the UI
    only).
  * test/test_helper.sh: Don't hardcode "amd64", to fix test failure when
    building on other architectures.

  [ Antonio Terceiro ]
  * debci-generate-index: update packages.json atomically
  * web UI improvements: