@@ -89,9 +89,12 @@ generate_package_run() {
   ln -sf "${run_id}.log" "${status_dir}/latest.log"
   ln -sf "${run_id}.json" "${status_dir}/latest.json"
   rm -f "${status_dir}/latest-autopkgtest"
-  # generate relative symlink for relocatability
-  ln -s "../../../../..${adtresult#$debci_data_basedir}/log" "${status_dir}/${run_id}.autopkgtest.log"
-  ln -s "../../../../..${adtresult#$debci_data_basedir}" "${status_dir}/latest-autopkgtest"
+
+  # generate relative symlinks for relocatability
+  ln -s "../../../../..${adtresult#$debci_data_basedir}/log.gz" \
+    "${status_dir}/${run_id}.autopkgtest.log.gz"
+  ln -s "../../../../..${adtresult#$debci_data_basedir}" \
+    "${status_dir}/latest-autopkgtest"
 }
 
 # write package test log to stdout (gets redirected to $log_file)
