@@ -1,0 +1,21 @@
+#!/bin/sh
+
+set -eu
+
+datadir="$1"
+
+find "$datadir/autopkgtest" '(' \
+  -name log -or \
+  -name '*-stdout' -or \
+  -name '*-stderr' \
+  ')' -exec gzip --verbose '{}' ';'
+
+find "$datadir/packages" -name '*.autopkgtest.log' | while read entry; do
+  directory=$(dirname "$entry")
+  (
+    cd $directory
+    target=$(readlink $entry)
+    ln -s "${target}.gz" "${entry}.gz"
+    rm -f "$entry"
+  )
+done
